# enclave-vaults

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: registry.yml  vault.yml
docs/: architecture.md  deploying-registry.md  deployment.md  dev-registry-deploy.md  manual-sgx-deploy.md  security.md
install/: Google Cloud.md  OVH Cloud.md
registry/: Caddyfile  Dockerfile  attestation.go  docker-compose.dev.yml  go.mod  main.go  main_test.go
vault/: Dockerfile  README.md
vault/config/: vault.json
vault/enclave/: Cargo.toml  build.rs
vault/enclave/src/: lib.rs
